Creates find city fragment. This fragment binds after a click find city button in welcome screen Delete all interfaces for rebuild project to MVVM model

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
   <string name="find_city">Find city</string>
   <string name="sensors">Sensors</string>
   <string name="use_geo">Use geo</string>
+  <string name="send">send</string>
+  <string name="empty_input">Empty input</string>
 </resources>
