--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
   <string name="send">send</string>
   <string name="empty_input">Empty input</string>
   <string name="server_is_not_responding">City don\'t found or server isn\'t responding</string>
+  <string name="do_not_have_sensors">You don\'t have any sensors</string>
 </resources>
