--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
   <string name="empty_input">Empty input</string>
   <string name="server_is_not_responding">City don\'t found or server isn\'t responding</string>
   <string name="does_not_have_sensors">You doesn\'t have any sensors</string>
+  <string name="coordinates_invalid">Coordinates are invalid</string>
 </resources>
