--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
   <string name="server_is_not_responding">City don\'t found or server isn\'t responding</string>
   <string name="does_not_have_sensors">You doesn\'t have any sensors</string>
   <string name="coordinates_invalid">Coordinates are invalid</string>
+  <string name="welcome">This is a first activity run, please open the nav menu</string>
+  <string name="find_a_city">Find a city</string>
+  <string name="use_sensors">Use sensors</string>
+  <string name="use_geo_location">Use geo location</string>
 </resources>
